--- a/executionEngine/templates/index.html
+++ b/executionEngine/templates/index.html
@@ -2,6 +2,8 @@
 
 {% block title %}{{ title }}{% endblock %}
 
+{% block header %}<span>Header of the Page</span>{% endblock %}
+
 {% block body %}
 {% load static %}
 
