--- a/executionEngine/templates/basic.html
+++ b/executionEngine/templates/basic.html
@@ -24,6 +24,9 @@
         .no-border {
             border-width: 0 !important;
         }
+        .w-15 {
+            width: 15% !important;
+        }
       </style>
 </head>
 <body>
